[package]
name = "jankloada-lib"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.7.1"
anyhow = "1.0.68"
