[package]
name = "jankloada-lib"
version = "0.1.1"
edition = "2021"
resolver = "2"
repository = "https://github.com/kujeger/jankloada"
authors = ["Nikolai Vincent Vaags <nikolai@nikolaivincent.net>"]
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.3"
anyhow = "1.0.70"

[package.metadata.release]
shared-version = true
tag-name = "v{{version}}"
