[package]
name = "jankloada"
version = "0.1.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/kujeger/jankloada"
authors = ["Nikolai Vincent Vaags <nikolai@nikolaivincent.net>"]
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
jankloada-lib = { path = "../jankloada-lib" }
iced = "0.7.0"
